[project]
name = "comfyui-futurewarningignore"
description = "This extension collapses 'future warning'"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Gourieff/ComfyUI-FutureWarningIgnore"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FutureWarningIgnore"
Icon = ""
