[project]
name = "comfyui-futurewarningignore"
description = "This extension collapses 'future warning' messages in your Console"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Gourieff/ComfyUI-FutureWarningIgnore"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gourieff"
DisplayName = "ComfyUI-FutureWarningIgnore"
Icon = ""
